client/src/pages/landing/LandingPage.css
.LandingPage{
    height:fit-content;
}


.landing-title {
    position:absolute;
    top:25vh;
    height:50vh;
    left:1em;
    font-size:4em;
}

.d-message-bubble{
    background: linear-gradient(180deg, rgba(255, 255, 255, 0.38) 0%, rgba(184, 159, 255, 0.1786) 100%);
    background-color: rgba(0, 0, 0, 0.233);
    padding:1em;
    padding-top:4em;
    padding-left:3em;
    padding-bottom:4em;
    border-radius: 60px;
    margin:0.5em;
    transition: all 0.2s ease-in-out;
    position: absolute;
    backdrop-filter: blur(20px);
    animation: float ease-in-out infinite;
    transform: scale(1.1);
}

.d-message-bubble:hover{
    background: linear-gradient(180deg, rgba(255, 255, 255, 0.473) 0%, rgba(184, 159, 255, 0.1786) 100%);
    cursor: pointer;
}

.d-bubble-background{
    position:absolute;
    left:0;
    top:0;
    background: rgb(2,0,36);
    box-shadow: -5px 6px 45px 0px #FFFFFF inset;
    background: radial-gradient(circle, rgba(105, 105, 105, 0.192) 0%, rgba(64,64,64,0.21612394957983194) 98%, rgba(255, 255, 255, 0.993) 100%);
    width:100%;
    height:100%;
    border-radius: 60px;
}
.d-bubble-text{
    color:var(--discord-full-white);
    margin-top:1em;
    margin-left:10%;
    max-width: 80%;
}

@keyframes float {
	0% {
		transform: translatey(0px);
	}
	50% {
		transform: translatey(-20px);
	}
	100% {
		transform: translatey(0px);
	}
}

.message-discord-icon{
    position: absolute;
    top:2em;
    left:2em;
    color: rgba(175, 175, 250, 0.9);
    border-radius:50%;
}

.main-start-button{
    position:absolute;
    top:60vh;
    left:10vw;
    color:white;
    background-color: var(--discord-blue-accent);
    padding:1em;
    padding-left:3em;
    padding-right:3em;
    border-radius: 20px;
    box-shadow: 0px 0px 4px 4px rgba(180, 215, 255, 0.212);
}

#main-graphs-section{
    transform: translateY(100vh);
}

